# dotfiles

./: .gitignore  Makefile.am  README.md  configure.ac  renovate.json
.github/workflows/: ci.yml  release-please.yml  release.yml
global/zsh/: .zprofile  .zshrc
linux/: install-pkg.sh
linux/zsh/: .zprofile  .zshrc
macOS/zsh/: .zprofile  .zshrc
macos/: install-pkg.sh
macos/zsh/: .zshrc
